# BallerStats

./: .gitignore  CMakeLists.txt
rsc/: README.txt
src/: main.cpp
